# cv_cmake_tutorial

cmake_tutorial/: CMakeLists.txt
cpp_hw1/: CMakeLists.txt  Dockerfile
cpp_hw1/src/: knn_test.cpp  knn_train.cpp
